fix test failure