@@ -32,12 +32,8 @@ import com.datatorrent.contrib.kafka.KafkaSinglePortStringInputOperator;
  {@code
 
  <property>
- <name>dt.application.GenericDimensionsApplication.attr.CONTAINER_MEMORY_MB</name>
+ <name>dt.application.GenericDimensionsApplication.operator.*.attr.MEMORY_MB</name>
  <value>8192</value>
- </property>
- <property>
- <name>dt.application.GenericDimensionsApplication.attr.containerJvmOpts</name>
- <value>-Xmx6g -server -Dlog4j.debug=true -Xloggc:&lt;LOG_DIR&gt;/gc.log -verbose:gc -XX:+PrintGCDateStamps</value>
  </property>
  <property>
  <name>dt.application.GenericDimensionsApplication.port.*.attr.QUEUE_CAPACITY</name>
